Fix layout of EmptyTab so it doesn't overflow

--- a/webapp/src/styles/ui-components.scss
+++ b/webapp/src/styles/ui-components.scss
@@ -367,6 +367,10 @@
   justify-content: center;
 }
 
+.stack.wrap    {
+  flex-wrap: wrap;
+}
+
 .stack.vertical {
   flex-direction: column;
 }
